# advent-of-code-2016

./: README.md  input4  p1.hs  p2.hs  p3.hs  p4.hs  p6.hs  p7.hs  p8.hs  p9.hs
p5/: .gitignore  ChangeLog.md  p5.cabal  p5.hs  p5.sh
