name:                p5
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Benjamin Jones
maintainer:          bjones@galois.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable p5
  main-is:             p5.hs
  build-depends:       base >=4.9 && <4.10,
                       pureMD5,
                       bytestring
  default-language:    Haskell2010
